k8s-monitoring/prometheus/visualization/k8s-graphana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: grafana-dashboard
  namespace: monitoring
spec:
  rules:
  - host: graphana-dashboard.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
#  tls:
#  - secretName: prometheus-dashboard-ssl
